Fixed spacing problem in header

--- a/style.css
+++ b/style.css
@@ -215,3 +215,6 @@ div p {
 	color: white;
 	font-size: 1em;
 }
+#one {
+	height: 9em;
+}
